--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-    <<head>
+    <head>
         {% if title %}
         <title>{{title}} - Microblog</title>
         {% else %}
@@ -11,6 +11,7 @@
         <div>
             Microblog: 
             <a href="{{url_for('index')}}">Home</a>
+            <a href="{{url_for('explore')}}">Explore</a>
             {% if current_user.is_anonymous %}
             <a href="{{url_for('login')}}">Login</a>
             {% else %}
