--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -64,5 +64,22 @@
     </script>
     {{ moment.include_moment() }}
     {{ moment.lang(g.locale) }}
+    <script>
+        async function translate(sourceElem, destElem, sourceLang, destLang) {
+            document.getElementbyId(destElem).innerHTML =
+                '<img src="{{url_for('static', filename='loading.gif')}}">';
+            const response = await fetch('/translate',{
+            method: 'POST',
+            headers: {'Content-Type': 'application/json; charset=utf-8'},
+            body: JSON.stringify({
+                text: document.getElementbyId(sourceElem).innerText,
+                source_language: sourceLang,
+                dest_language: destLang
+                })
+            })
+            const data = await response.json();
+            document.getElementbyId(destElem).innerText = data.text;
+        }
+        </script>
   </body>
 </html>
