--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -72,6 +72,21 @@
       {% endwith %}
       {% block content %}{% endblock %}
     </div>
+    {% block content %}
+        <div class="container">
+        {% if current_user.is_authenticated %}
+        {% with tasks = current_user.get_tasks_in_progress() %}
+        {% if tasks %}
+            {% for task in tasks %}
+            <div class="alert alert-success" role="alert">
+                {{ task.description }}
+                <span id="{{ task.id }}-progress">{{ task.get_progress() }}</span>%
+            </div>
+            {% endfor %}
+        {% endif %}
+        {% endwith %}
+        {% endif %}
+    {% endblock %}
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
@@ -138,14 +153,27 @@
               const response = await fetch('{{ url_for('main.notifications')}}?since=' + since);
               const notifications = await response.json();
               for (let i = 0; i < notifications.length; i++) {
-                if (notifications[i].name == 'unread_message_count')
-                    set_message_count(notifications[i].data);
+                switch (notification[i].name){
+                      case 'unread_message_count':
+                        set_message_count(notifications[i].data);
+                        break;
+                      case 'task_progress':
+                        set_task_progress(notifications[i].data.task_id,
+                          notifications[i].data.progress);
+                        break;
+                }
                 since = notifications[i].timestamp;
               }
           }, 10000);
       }
       document.addEventListener('DOMContentLoaded', initialize_notifications);
       {% endif %}
+      function set_task_progress(task_id, progress) {
+          const progressElement = document.getElementById(task_id + '-progress value');
+          if (progressElement) {
+              progressElement.innerText = progress;
+          }
+      }
     </script>
   </body>
 </html>
